--- a/latexbasics-setup.tex
+++ b/latexbasics-setup.tex
@@ -36,8 +36,8 @@
 }
 
 \def\blankcmd#1{\solGet{command}{\ttfamily\textbackslash\ignorespaces#1}}
-\newcommand\cmdidx[2][]{\relax\label{cmdlk:#2}\index{#2?\protect\hyperref[cmdlk:#2]{\protect\blankcmd{#2}\ifx!#1!\else~\textsuperscript{(Paket: \T{#1})}\fi}}}
-\newcommand\cmdsidx[3][]{\relax\label{cmdlk:#2}\index{#3#2?\protect\hyperref[cmdlk:#2]{\protect\blankcmd{#2}\ifx!#1!\else~\textsuperscript{(Paket: \T{#1})}\fi}}}
+\newcommand\cmdidx[2][]{\relax\label{cmdlk:#2}\index{#2@\protect\hyperref[cmdlk:#2]{\protect\blankcmd{#2}\ifx!#1!\else~\textsuperscript{(Paket: \T{#1})}\fi}}}
+\newcommand\cmdsidx[3][]{\relax\label{cmdlk:#2}\index{#3#2@\protect\hyperref[cmdlk:#2]{\protect\blankcmd{#2}\ifx!#1!\else~\textsuperscript{(Paket: \T{#1})}\fi}}}
 
 \def\say#1{\glqq#1\grqq{}}
 
